if needed.  A warning will be generated if multiple numeric or date properties are
found in the same document, and the additional properties will be ignored.

Previously, properties of the same name were added to the index, but could not be
retrieved.

To do: removed the C<next> pointer, and allow user-defined character to place between
properties.

=item * New XML Parser

Swish now uses James Clark's expat XML parser library.

=item * LST type of document no longer supported

LST allowed indexing of files that contained multiple documents.

=back

Changes to Configuration File Directives.  Please see L<SWISH-CONFIG|SWISH-CONFIG> for
more info.

=over 4

=item * New directives: IndexContents and DefaultContents

The IndexContents directive assigns internal Swish document parsers
to files based on their file type.  The DefaultContents directive assigns
a parser to be used on file that are not assigned a parser with IndexContents.

=item * New directive: UndefinedMetaTags [error|ignore|index|auto]

This describes what to do when a meta tag is found in a document that is not listed in the MetaNames directive.

=item * New directive: IgnoreTags

Will ignore listed tags in XML files

=item * New directive: SwishProgParameters *list of words*

Passes words listed to the external swish-e program when running with
C<-S prog> document source method.

=item * New directive: ConvertHTMLEntities [yes|no]

Controls parsing and conversion of HTML entities.

=item * New directive: DontBumpPositionOnMetaTags

The word position is now bumped when a new metatag is found -- this
is to prevent phrases from matching across meta tags.  This directive will
disable this behavior for the listed tags.

This directive works for HTML and XML documents.

=item * Changed directive: IndexComments

This has been changed such that comments are not indexed by default.

=item * Changed directive: IgnoreWords

The builtin list of stopwords has been removed. Use of the SwishDefault word